# auction-agent

./: .dockerignore  .env.example  .gitignore  .nixpacks  BID_STRATEGIST_README.md  BUILD_FIX_SUMMARY.md  DATA_COLLECTOR_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  EMERGENCY_BUILD_FIX.md  FIX_BUILD_ERRORS.md  IMPLEMENTATION_COMPLETE.md  MANUAL_RAILWAY_SETUP.md  PROGRESS_REPORT.md  Procfile  QUICK_START.md  RAILWAY_GITHUB_CONNECTION_GUIDE.md  README.md  RED_TEAM_IMPLEMENTATION.md  RIGHTS_ANALYZER_README.md  RISK_ASSESSOR_IMPLEMENTATION.md  deploy-now.bat  deploy-to-railway.bat  docker-compose.yml  example_data_collector.py  nixpacks.toml  pyproject.toml  railway-api-deploy.py  railway-commands.txt  railway.json  railway.toml  requirements-full.txt  requirements-minimal.txt  requirements.txt  setup-railway.bat  test_basic_structure.py  test_bid_only.py  test_bid_strategist.py  test_bid_strategist_standalone.py  (+10 more)
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
.railway/: config.json  service-config.json
config/: settings.py
src/: __init__.py  api.py  main.py
src/agents/: __init__.py  bid_strategist.py  data_collector.py  location_analyzer.py  orchestrator.py  red_team.py  reporter.py  rights_analyzer.py  risk_assessor.py  valuator.py
src/models/: __init__.py  auction.py  location.py  rights.py  risk.py  strategy.py  validation.py  valuation.py
src/services/: __init__.py  cache.py  database.py  llm.py
src/utils/: __init__.py  logger.py  rate_limiter.py
tests/: __init__.py  conftest.py  test_data_collector.py  test_models.py
