[project]
name = "auction-agent"
version = "0.1.0"
description = "부동산 경매 AI 에이전트 시스템"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # LangChain & LangGraph
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-openai>=0.2.0",

    # Data Processing
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pydantic>=2.5.0",

    # Web Scraping
    "selenium>=4.18.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",

    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",

    # ML/AI
    "xgboost>=2.0.0",
    "scikit-learn>=1.4.0",

    # API & Web
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",

    # Document Processing
    "jinja2>=3.1.0",
    "weasyprint>=61.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
