[project]
name = "auction-agent"
version = "0.1.0"
description = "부동산 경매 AI 에이전트 시스템"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Minimal requirements for Railway deployment
    # LangChain Core
    "langchain==0.3.14",
    "langgraph==0.2.60",
    "langchain-anthropic==0.2.8",
    "langchain-core==0.3.29",

    # FastAPI
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.5",
    "pydantic-settings==2.7.1",

    # Database
    "sqlalchemy==2.0.36",
    "asyncpg==0.30.0",
    "redis==5.2.1",

    # Utilities
    "python-dotenv==1.0.1",
    "httpx==0.28.1",
    "aiohttp==3.11.11",
    "tenacity==9.0.0",

    # Basic dependencies
    "jinja2==3.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
